--- a/widget.css
+++ b/widget.css
@@ -1,22 +1,22 @@
 /* CSS for ChiliPeppr Widget */
 
-#com-chilipeppr-widget-macro {
+#com-chilipeppr-widget-luaeditor {
    /*margin: 20px;*/
 }
 
-#com-chilipeppr-widget-macro-body {
+#com-chilipeppr-widget-luaeditor .panel-body {
     padding:0;
 }
-#com-chilipeppr-widget-macro-body textarea {
+#com-chilipeppr-widget-luaeditor .panel-body textarea {
     width:100%;
     height:100%;
 }
-#com-chilipeppr-widget-macro-ftr {
+#com-chilipeppr-widget-luaeditor .panel-footer {
     font-size:11px;
     padding:0;
     margin:0;
 }
-#com-chilipeppr-widget-macro-status {
+#com-chilipeppr-widget-luaeditor .panel-footer textarea {
     background:none;
     background-color:#f5f5f5;
     border:none;
