--- a/widget.css
+++ b/widget.css
@@ -25,3 +25,32 @@
 #com-chilipeppr-widget-luaeditor .ace_search_field {
     color: black;
 }
+
+#com-chilipeppr-widget-luaeditor .nav-tabs>li>a {
+    padding: 2px 18px 2px 6px;
+}
+
+#com-chilipeppr-widget-luaeditor .close {
+    position: absolute;
+    right:6px;
+    top:3px;
+    /*top: -2px;*/
+    /*right: -21px;*/
+    color: inherit;
+    float: right;
+    font-size: 21px;
+    font-weight: 700;
+    line-height: 1;
+    color: #000;
+    text-shadow: 0 1px 0 #fff;
+    filter: alpha(opacity=20);
+    opacity: .2;
+}
+#com-chilipeppr-widget-luaeditor .close:hover {
+    opacity:1;
+    filter: alpha(opacity=100);
+}
+
+.luaeditor-maineditor {
+    font-size:13px;
+}
