--- a/widget.css
+++ b/widget.css
@@ -2,6 +2,7 @@
 
 #com-chilipeppr-widget-luaeditor {
    /*margin: 20px;*/
+   margin-bottom:0;
 }
 
 #com-chilipeppr-widget-luaeditor .panel-body {
